--- a/assets/style.css
+++ b/assets/style.css
@@ -196,6 +196,84 @@ nav ul li a:hover {
       scroll-padding-top: 4em;
 }
 
+.ustadz {
+      width: 100%;
+      min-height: 100vh;
+      display: flex;
+      background: linear-gradient(
+                  0deg,
+                  rgba(0, 0, 0, 0.3) 0%,
+                  rgba(0, 0, 0, 0.3) 100%
+            ),
+            url(https://s3-alpha-sig.figma.com/img/de9e/ea83/57b773523571593541c8c62822a083bb?Expires=1698624000&Signature=GoXUftEplijv6O8-4cWbCciE64w2W9mqBHJHp1jVs3SKjJzdvbDZ~Sw~W1njU1EjYdbTgInYLW6uP~OABUcEmNBzbvhDdGwgNj7hCrh-OAw6rAYMmuqmj6GaUXCrnJkRgGvO7Ecod8bSt7-KkG6p~wfwmeMwFTYuyrVBrkfzK~V7OSG~wW5li5vR7G0c-~IBHovb8Qc4tBWjgaEpOuvMoR48w08c2g-SKPOYuyZ2CQ7UC3TR6YReDcGyhsCns2kIfUvNFdzaYQxFHzl83O38sgq9k4vJFjjZIhrsuZ5wORB1cYwfWRWQKIK7V78DZLRVsh56rX~iOsuwxQ~N-CHYPg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4);
+      width: 100%;
+      /* min-height: 100vh;
+max-height: 200vh; */
+      background-position: bottom;
+      background-size: cover;
+      background-attachment: fixed;
+      /* padding: 30px 0 0 0; */
+}
+
+.ustd-box {
+      color: var(--gray);
+      border-radius: 39px;
+      background: rgba(246, 241, 241, 0.4);
+      backdrop-filter: blur(9px);
+      padding: 30px 30px 0 30px;
+      width: 90%;
+      min-height: 80vh;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+}
+.ustd-title {
+      text-align: center;
+      font-size: 28px;
+}
+.ustdz {
+      display: grid;
+      grid-template-columns: 1fr 2.5fr;
+      gap: 20px;
+      margin: auto;
+      height: 90%;
+}
+.ustd-box div:nth-child(2) img {
+      height: 500px;
+      margin-top: auto;
+}
+.ustd-des {
+      margin: auto;
+      padding-bottom: 20px;
+}
+.ustd-des p {
+      font-size: large;
+      margin: 20px 0;
+}
+.ustd-des h1 {
+      font-size: xx-large;
+      margin-bottom: 20px;
+}
+
+.ustd-des button {
+      color: var(--darktext);
+      background-color: var(--gray);
+      border-style: none;
+      font-size: larger;
+      padding: 10px 30px;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: var(--transition);
+}
+.ustd-des button:hover {
+      background-color: var(--blueGray);
+      color: var(--gray);
+      transform: scale(1.02);
+}
+.ustd-des button:active {
+      transform: scale(0.97);
+}
 .program {
       background-color: var(--blue);
 }
@@ -262,12 +340,12 @@ nav ul li a:hover {
       cursor: pointer;
       transition: var(--transition);
 }
-.contact-grid form button:hover{
+.contact-grid form button:hover {
       background-color: var(--darkBlue);
       transform: scale(1.02);
 }
-.contact-grid form button:active{
-      transform: scale(.97);
+.contact-grid form button:active {
+      transform: scale(0.97);
 }
 
 .contact-grid iframe {
@@ -301,7 +379,6 @@ footer {
       padding: 50px;
       display: grid;
       grid-template-columns: 3fr 1fr;
-
 }
 .footer-grid-top div:nth-child(1) {
       display: flex;
@@ -331,6 +408,27 @@ footer {
       color: var(--blueGray);
 }
 
+.mapel {
+      width: 100%;
+      padding: 25px 0;
+}
+
+
+.swiper {
+      width: 100%;
+      height: 100%;
+      gap: 20px;
+}
+
+.swiper-slide {
+      text-align: left;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+      height: 100%;
+      padding: 10px;
+      cursor: grab;
+}
 @media screen and (max-width: 1100px) {
       .burger {
             display: flex;
@@ -373,8 +471,26 @@ footer {
       .center-title h1 {
             font-size: 40px;
       }
+      .ustadz {
+            height: 120vh;
+      }
+
+      .ustd-bg {
+            height: 120vh;
+      }
+      .des p {
+            order: 1;
+      }
 }
 
+@media screen and (max-width: 870px) {
+      .ustdz {
+            grid-template-columns: 1fr;
+      }
+      .ustd-box div:nth-child(2) img {
+            height: 350px;
+      }
+}
 @media screen and (max-width: 768px) {
       .contact-grid {
             display: grid;
@@ -406,10 +522,20 @@ footer {
             width: 95%;
       }
       .title h1 {
-            font-size: 240%;
+            font-size: 200%;
       }
       .des img {
             width: 80%;
             margin: auto;
       }
+      .ustd-title,
+      .ustd-box div:nth-child(2) h1,
+      .ustd-box div:nth-child(2) p,
+      .ustd-box div:nth-child(2) button {
+            font-size: 95%;
+      }
+      .ustd-box div:nth-child(2) img {
+            height: 290px;
+      }
 }
+
