--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,7 @@ html {
       scroll-behavior: smooth;
       scroll-padding-top: 5em;
 }
-body{
+body {
       overflow-x: hidden;
 }
 .container {
@@ -46,6 +46,7 @@ body{
       position: fixed;
       z-index: 10000;
       box-shadow: 4px 4px 9px 0px #00000040;
+      transition: var(--transition);
 }
 
 .nav-logo img {
@@ -116,6 +117,45 @@ nav ul li a:hover {
       width: 42px !important;
 }
 
+.beranda {
+      background-color: var(--darkBlue);
+      color: var(--blueGray);
+      padding: 60px 0;
+}
+
+.about-grid-wrapper {
+      margin: 100px 0;
+}
+.about-grid-wrapper > div:nth-child(1) {
+      display: grid;
+      grid-template-columns: 0.7fr 1fr;
+      margin-bottom: 90px;
+}
+.about-grid-wrapper > div:nth-child(2) {
+      display: grid;
+      grid-template-columns: 1fr 0.7fr;
+      text-align: end;
+}
+
+.about-grid-wrapper > div:nth-child(2) i,
+.about-grid-wrapper > div:nth-child(1) i {
+      margin: auto;
+}
+.about-grid-wrapper > div:nth-child(1) div:nth-child(1),
+.about-grid-wrapper > div:nth-child(1) div:nth-child(2) {
+      display: flex;
+      flex-direction: column;
+}
+.about-grid-wrapper div:nth-child(1) > div,
+.about-grid-wrapper div:nth-child(2) > div {
+      width: 85%;
+}
+.about-grid-wrapper div:nth-child(2) > div {
+      margin-left: auto;
+}
+.about-grid-wrapper h1 {
+      margin: 20px 0;
+}
 .img {
       background: linear-gradient(
                   0deg,
@@ -206,8 +246,8 @@ nav ul li a:hover {
       display: flex;
       background: linear-gradient(
                   0deg,
-                  rgba(0, 0, 0, 0.3) 0%,
-                  rgba(0, 0, 0, 0.3) 100%
+                  rgba(0, 0, 0, 0.5) 0%,
+                  rgba(0, 0, 0, 0.5) 100%
             ),
             url(https://s3-alpha-sig.figma.com/img/de9e/ea83/57b773523571593541c8c62822a083bb?Expires=1698624000&Signature=GoXUftEplijv6O8-4cWbCciE64w2W9mqBHJHp1jVs3SKjJzdvbDZ~Sw~W1njU1EjYdbTgInYLW6uP~OABUcEmNBzbvhDdGwgNj7hCrh-OAw6rAYMmuqmj6GaUXCrnJkRgGvO7Ecod8bSt7-KkG6p~wfwmeMwFTYuyrVBrkfzK~V7OSG~wW5li5vR7G0c-~IBHovb8Qc4tBWjgaEpOuvMoR48w08c2g-SKPOYuyZ2CQ7UC3TR6YReDcGyhsCns2kIfUvNFdzaYQxFHzl83O38sgq9k4vJFjjZIhrsuZ5wORB1cYwfWRWQKIK7V78DZLRVsh56rX~iOsuwxQ~N-CHYPg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4);
       width: 100%;
@@ -418,7 +458,6 @@ footer {
       overflow-x: hidden;
 }
 
-
 .swiper {
       width: 100%;
       height: 100%;
@@ -447,15 +486,15 @@ footer {
             flex-direction: column;
             position: absolute;
             right: 0;
-            top: 50%;
+            top: 0%;
             background: var(--blue);
             width: 50%;
-            height: 60vh;
+            height: 65vh;
             border-radius: 0 0 30px 30px;
-            padding-top: 50px;
+            padding-top: 100px;
             z-index: -10;
             transition: var(--transition);
-            transform: translateY(-100%);
+            transform: translateY(-110%);
       }
       .active {
             transform: translateY(0%);
@@ -539,5 +578,21 @@ footer {
       .ustd-box div:nth-child(2) img {
             height: 290px;
       }
+      .about-grid-wrapper div:nth-child(1) > div,
+      .about-grid-wrapper div:nth-child(2) > div {
+            width: 100%;
+      }
+      .about-grid-wrapper > div:nth-child(1) i{
+            margin: auto 20px auto 5px;
+      }
+      .about-grid-wrapper > div:nth-child(2) i {
+            margin: auto 5px auto 20px;
+      }
+      .about-grid-wrapper h1{
+            font-size: 200%;
+      }
 }
-
+.transparant {
+      background-color: #00000000 !important;
+      box-shadow: none;
+}
