--- a/assets/style.css
+++ b/assets/style.css
@@ -198,7 +198,7 @@ nav ul li a:hover {
 			rgba(0, 0, 0, 0.6) 0%,
 			rgba(0, 0, 0, 0.6) 100%
 		),
-		url(https://s3-alpha-sig.figma.com/img/760f/7eef/a1f4918396463f413e9a9bc9627ac108?Expires=1698624000&Signature=XdZBucRvVQUY-Cbf6~JadElNJJpa48GQAU6INf2ezwvPhpRon~pJmv4oAfAvRCLPd8t1m7uYAhDUi3RQuJ3VLviN6lYojGY1Sq12hqgE1Byjp5Nau6opi4rfsGnmaRlih8y1qvQlTCPfVlZPaRhibrXkWWmD48GIFtUIqjiWod4tIV5mRnhEadTmUAbfUAIECH2kP5VXrlVHSaScGR~BcxaB68MnEH6YWycfIt0z8BMAp6w5kKTDINOELtw4WcaY-FmAZhx0fc5vrOHsAyFYxro-tMvI6ErsjxB6jz2lkdIlFM0tSv1pUcF-0NQnIO7lpQBqC0wsOq9B1ZfSS4WhOQ__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4);
+		url(https://www.figma.com/file/vzrM6iOiM779EerhXP3Gy0/image/760f7eefa1f4918396463f413e9a9bc9627ac108);
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -302,7 +302,7 @@ flex-direction: column;
 			rgba(0, 0, 0, 0.5) 0%,
 			rgba(0, 0, 0, 0.5) 100%
 		),
-		url(https://s3-alpha-sig.figma.com/img/de9e/ea83/57b773523571593541c8c62822a083bb?Expires=1698624000&Signature=GoXUftEplijv6O8-4cWbCciE64w2W9mqBHJHp1jVs3SKjJzdvbDZ~Sw~W1njU1EjYdbTgInYLW6uP~OABUcEmNBzbvhDdGwgNj7hCrh-OAw6rAYMmuqmj6GaUXCrnJkRgGvO7Ecod8bSt7-KkG6p~wfwmeMwFTYuyrVBrkfzK~V7OSG~wW5li5vR7G0c-~IBHovb8Qc4tBWjgaEpOuvMoR48w08c2g-SKPOYuyZ2CQ7UC3TR6YReDcGyhsCns2kIfUvNFdzaYQxFHzl83O38sgq9k4vJFjjZIhrsuZ5wORB1cYwfWRWQKIK7V78DZLRVsh56rX~iOsuwxQ~N-CHYPg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4);
+		url(https://www.figma.com/file/vzrM6iOiM779EerhXP3Gy0/image/de9eea8357b773523571593541c8c62822a083bb);
 	width: 100%;
 	/* min-height: 100vh;
 max-height: 200vh; */
